// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsPage should render a component when has data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.section>
        <mock-styled.h1
          classname=""
        >
          Apps Management
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 2.5rem;
"
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="searchTerm"
                  type="search"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  App or Developer Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="companyName"
                  type="search"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Company Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="id"
                  type="search"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  App Id
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="registeredFrom"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Registered From
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="registeredTo"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Registered To
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="publicListedDateFrom"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Publicly Listed From
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="publicListedDateTo"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Publicly Listed To
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                In Public AppMarket
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="option-public-all"
                  name="isPublic"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-public-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-public-true"
                  name="isPublic"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-public-true"
                >
                  <mock-styled.span>
                    Public
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-public-false"
                  name="isPublic"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-public-false"
                >
                  <mock-styled.span>
                    Private
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Integration or AC Enabled
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="option-integration-all"
                  name="isDirectApi"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-integration-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-integration-true"
                  name="isDirectApi"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-integration-true"
                >
                  <mock-styled.span>
                    Integration
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-integration-false"
                  name="isDirectApi"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-integration-false"
                >
                  <mock-styled.span>
                    AC App
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Publicly Listed
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="option-listed-all"
                  name="isListed"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-listed-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-listed-true"
                  name="isListed"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-listed-true"
                >
                  <mock-styled.span>
                    Listed
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-listed-false"
                  name="isListed"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-listed-false"
                >
                  <mock-styled.span>
                    Development
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <div
          class="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.button
                classname="mock-css."
                type="button"
              >
                Download CSV
                <mock-styled.div />
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <div
          class="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.h2
            classname=""
          >
            Total Apps
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            1
          </mock-styled.p>
          <mock-styled.div
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="10"
          >
            <mock-styled.div>
              <mock-styled.div>
                App Name
              </mock-styled.div>
              <mock-styled.div>
                AppId
              </mock-styled.div>
              <mock-styled.div>
                Summary
              </mock-styled.div>
              <mock-styled.div>
                Developer Name
              </mock-styled.div>
              <mock-styled.div>
                Listed
              </mock-styled.div>
              <mock-styled.div>
                Integration
              </mock-styled.div>
              <mock-styled.div>
                Featured
              </mock-styled.div>
              <mock-styled.div>
                Created
              </mock-styled.div>
              <mock-styled.div>
                Publicly Listed
              </mock-styled.div>
              <mock-styled.div>
                Public
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.div
                    data-narrow-label="App Name"
                  >
                    Reapit Insights
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="AppId"
                  >
                    f83e679e-a7cd-4889-a7f9-f4a8a8ed5a09
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Summary"
                  >
                    Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Developer Name"
                  >
                    Reapit Ltd Internal
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Listed"
                  >
                    <mock-styled.span
                      classname="mock-css."
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Integration"
                  >
                    <mock-styled.span
                      classname="mock-css."
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Featured"
                  >
                    <mock-styled.span
                      classname="mock-css."
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Created"
                  >
                    04 Mar 2021 09:37
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Publicly Listed"
                  >
                    -
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Public"
                  >
                    <mock-styled.span
                      classname="mock-css."
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.span
                    classname="mock-css."
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div
                      classname="mock-css."
                    >
                      <mock-styled.button
                        classname="mock-css."
                      >
                        View in AppMarket
                        <mock-styled.div />
                      </mock-styled.button>
                      <mock-styled.button
                        classname="mock-css."
                      >
                        View in DevPortal
                        <mock-styled.div />
                      </mock-styled.button>
                      <mock-styled.button
                        classname="mock-css."
                        disabled="false"
                      >
                        Check AWS Only
                        <mock-styled.div />
                      </mock-styled.button>
                      <mock-styled.button
                        classname="mock-css."
                        type="button"
                      >
                        Delete
                        <mock-styled.div />
                      </mock-styled.button>
                      <mock-styled.button
                        classname="mock-css."
                      >
                        Toggle Subscription
                        <mock-styled.div />
                      </mock-styled.button>
                      <mock-styled.button
                        classname="mock-css."
                      >
                        Togggle Featured
                        <mock-styled.div />
                      </mock-styled.button>
                      <mock-styled.button
                        classname="mock-css."
                      >
                        Togggle API Consumption
                        <mock-styled.div />
                      </mock-styled.button>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              value="1"
            />
             of 
            1
          </mock-styled.div>
          <mock-styled.button
            data-testid="back-button"
            type="button"
          >
            <mock-styled.span
              classname=""
            >
              <svg />
            </mock-styled.span>
          </mock-styled.button>
          <mock-styled.button
            data-testid="forward-button"
            type="button"
          >
            <mock-styled.span
              classname=""
            >
              <svg />
            </mock-styled.span>
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.section>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.section>
      <mock-styled.h1
        classname=""
      >
        Apps Management
      </mock-styled.h1>
      <form>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="searchTerm"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                App or Developer Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="companyName"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Company Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="id"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                App Id
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="publicListedDateFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Publicly Listed From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="publicListedDateTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Publicly Listed To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              In Public AppMarket
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.input
                id="option-public-all"
                name="isPublic"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-public-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-public-true"
                name="isPublic"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-public-true"
              >
                <mock-styled.span>
                  Public
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-public-false"
                name="isPublic"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-public-false"
              >
                <mock-styled.span>
                  Private
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Integration or AC Enabled
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.input
                id="option-integration-all"
                name="isDirectApi"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-integration-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-integration-true"
                name="isDirectApi"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-integration-true"
              >
                <mock-styled.span>
                  Integration
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-integration-false"
                name="isDirectApi"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-integration-false"
              >
                <mock-styled.span>
                  AC App
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Publicly Listed
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.input
                id="option-listed-all"
                name="isListed"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-listed-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-listed-true"
                name="isListed"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-listed-true"
              >
                <mock-styled.span>
                  Listed
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-listed-false"
                name="isListed"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-listed-false"
              >
                <mock-styled.span>
                  Development
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <div
        class="mock-css.
  margin-bottom: 2.5rem;
"
      >
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="mock-css."
              type="button"
            >
              Download CSV
              <mock-styled.div />
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <div
        class="mock-css.
  margin-bottom: 2.5rem;
"
      >
        <mock-styled.h2
          classname=""
        >
          Total Apps
        </mock-styled.h2>
        <mock-styled.p
          classname="mock-css."
        >
          1
        </mock-styled.p>
        <mock-styled.div
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="10"
        >
          <mock-styled.div>
            <mock-styled.div>
              App Name
            </mock-styled.div>
            <mock-styled.div>
              AppId
            </mock-styled.div>
            <mock-styled.div>
              Summary
            </mock-styled.div>
            <mock-styled.div>
              Developer Name
            </mock-styled.div>
            <mock-styled.div>
              Listed
            </mock-styled.div>
            <mock-styled.div>
              Integration
            </mock-styled.div>
            <mock-styled.div>
              Featured
            </mock-styled.div>
            <mock-styled.div>
              Created
            </mock-styled.div>
            <mock-styled.div>
              Publicly Listed
            </mock-styled.div>
            <mock-styled.div>
              Public
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname=""
                style="font-size: 1.2rem;"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="App Name"
                >
                  Reapit Insights
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="AppId"
                >
                  f83e679e-a7cd-4889-a7f9-f4a8a8ed5a09
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Summary"
                >
                  Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Developer Name"
                >
                  Reapit Ltd Internal
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Listed"
                >
                  <mock-styled.span
                    classname="mock-css."
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Integration"
                >
                  <mock-styled.span
                    classname="mock-css."
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Featured"
                >
                  <mock-styled.span
                    classname="mock-css."
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Created"
                >
                  04 Mar 2021 09:37
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Publicly Listed"
                >
                  -
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Public"
                >
                  <mock-styled.span
                    classname="mock-css."
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="mock-css."
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.button
                      classname="mock-css."
                    >
                      View in AppMarket
                      <mock-styled.div />
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                    >
                      View in DevPortal
                      <mock-styled.div />
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                      disabled="false"
                    >
                      Check AWS Only
                      <mock-styled.div />
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                      type="button"
                    >
                      Delete
                      <mock-styled.div />
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                    >
                      Toggle Subscription
                      <mock-styled.div />
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                    >
                      Togggle Featured
                      <mock-styled.div />
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                    >
                      Togggle API Consumption
                      <mock-styled.div />
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          1
        </mock-styled.div>
        <mock-styled.button
          data-testid="back-button"
          type="button"
        >
          <mock-styled.span
            classname=""
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.button
          data-testid="forward-button"
          type="button"
        >
          <mock-styled.span
            classname=""
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsPage should render a component when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.section>
        <mock-styled.h1
          classname=""
        >
          Apps Management
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 2.5rem;
"
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="searchTerm"
                  type="search"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  App or Developer Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="companyName"
                  type="search"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Company Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="id"
                  type="search"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  App Id
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="registeredFrom"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Registered From
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="registeredTo"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Registered To
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="publicListedDateFrom"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Publicly Listed From
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="test-static-id"
                  name="publicListedDateTo"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Publicly Listed To
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                In Public AppMarket
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="option-public-all"
                  name="isPublic"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-public-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-public-true"
                  name="isPublic"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-public-true"
                >
                  <mock-styled.span>
                    Public
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-public-false"
                  name="isPublic"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-public-false"
                >
                  <mock-styled.span>
                    Private
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Integration or AC Enabled
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="option-integration-all"
                  name="isDirectApi"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-integration-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-integration-true"
                  name="isDirectApi"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-integration-true"
                >
                  <mock-styled.span>
                    Integration
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-integration-false"
                  name="isDirectApi"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-integration-false"
                >
                  <mock-styled.span>
                    AC App
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Publicly Listed
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="option-listed-all"
                  name="isListed"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-listed-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-listed-true"
                  name="isListed"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-listed-true"
                >
                  <mock-styled.span>
                    Listed
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-listed-false"
                  name="isListed"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-listed-false"
                >
                  <mock-styled.span>
                    Development
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.section>
      <mock-styled.h1
        classname=""
      >
        Apps Management
      </mock-styled.h1>
      <form>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="searchTerm"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                App or Developer Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="companyName"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Company Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="id"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                App Id
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="publicListedDateFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Publicly Listed From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="publicListedDateTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Publicly Listed To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              In Public AppMarket
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.input
                id="option-public-all"
                name="isPublic"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-public-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-public-true"
                name="isPublic"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-public-true"
              >
                <mock-styled.span>
                  Public
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-public-false"
                name="isPublic"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-public-false"
              >
                <mock-styled.span>
                  Private
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Integration or AC Enabled
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.input
                id="option-integration-all"
                name="isDirectApi"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-integration-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-integration-true"
                name="isDirectApi"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-integration-true"
              >
                <mock-styled.span>
                  Integration
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-integration-false"
                name="isDirectApi"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-integration-false"
              >
                <mock-styled.span>
                  AC App
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Publicly Listed
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.input
                id="option-listed-all"
                name="isListed"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-listed-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-listed-true"
                name="isListed"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-listed-true"
              >
                <mock-styled.span>
                  Listed
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-listed-false"
                name="isListed"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-listed-false"
              >
                <mock-styled.span>
                  Development
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
